# freshservice_mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: docker-ghcr-publish.yml  main_insparklabs-freshservice-mcp.yml
src/freshservice_mcp/: __init__.py  server.py
tests/: test-fs-mcp.py
