[project]
name = "freshservice-mcp"
version = "0.1.0"
description = "An MCP server for Freshservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.2.2.post1",
    "httpx==0.28.1",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
]

[[project.authors]]
name = "Gopi Krishnan"
email = "gopi@effy.co.in"

[[project.authors]]
name = "Maanaesh Swamy"
email = "maanaesh.s@effy.co.in"

[[project.authors]]
name = "Vijay Ragunath"
email = "vijay.r@effy.co.in"

[project.scripts]
freshservice-mcp = "freshservice_mcp.server:main"

